tests/invalid/main_guard_rhs_not_string/main.py
def run_case() -> None:
    print("x")


if __name__ == 0:
    run_case()
